ME-940 : Dev : The colour picker in content font there is a large gap and turns up outside of the screen can’t even view it and edit it  Fixed it

--- a/assets/styles/edit/appEditArea.css
+++ b/assets/styles/edit/appEditArea.css
@@ -503,6 +503,7 @@ a.md-button:hover:not([disabled]),
     text-decoration: none;
     margin-bottom: 22px;
     padding-left: 80px;
+    position: relative;
 }
 
 .other-setting{
